# lets-get-rusty-bootcamp

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
stack_overflow_api/: .env  Cargo.toml
stack_overflow_api/migrations/: 20260608000000_init.sql
stack_overflow_api/requests/: misc.http  questions.http
stack_overflow_api/src/: main.rs  router.rs
stack_overflow_api/src/app/: app_config.rs  app_logger.rs  config.rs  error.rs  logger.rs  mod.rs  request_context.rs  router.rs  state.rs
stack_overflow_api/src/app/extractors/: mod.rs  valid_json.rs  valid_path.rs  valid_query.rs
stack_overflow_api/src/dto/: common.rs  misc_dto.rs  mod.rs  question_dto.rs
stack_overflow_api/src/handlers/: misc.rs  mod.rs  question.rs
stack_overflow_api/src/payload/: health_check_response.rs  mod.rs  ping_pong_respose.rs
stack_overflow_api/src/repository/: mod.rs  question_repo.rs
